welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:20: error: l is already defined as variable l
	var l = getMondeLargeur()-1;
            ^